Fixing traits alignment

--- a/portfolio-website/src/containers/Attributes/Attributes.module.scss
+++ b/portfolio-website/src/containers/Attributes/Attributes.module.scss
@@ -22,6 +22,7 @@
         width: 100%;
         max-width: 800px;
         margin: 0 auto;
+        padding-bottom: 60px;
 
         .Attributes{
             width: 100%;
@@ -33,8 +34,8 @@
 
             .Attribute{
                 padding: 20px;
-                margin-left: 20px;
-                flex: 0 1 auto;
+                // margin-left: 20px;
+                flex: 0 1 150px;
 
 
                 strong{
@@ -53,7 +54,8 @@
             }
             .Explanation{
                 flex: 1 1 300px;
-                padding: 20px 40px 20px 40px;
+                // padding: 20px 40px 20px 40px;
+                padding: 0 20px 0 20px;
                 text-align: left;
 
             }
